--- a/track.html
+++ b/track.html
@@ -651,6 +651,7 @@
 						</a>
 					</div>
 				`;
+				noResults.scrollIntoView({ behavior: 'smooth', block: 'start' });
 			}
 
 			function clearSearch() {
