--- a/archive.html
+++ b/archive.html
@@ -160,7 +160,7 @@
 							<ul class="dropdown-menu dropdown-menuAnimated">
 								<li><a class="dropdown-item" href="/archive">Current Volume: 2(2026)</a></li>
 								<li><hr class="dropdown-divider"></li>
-								<li><a class="dropdown-item" href="/archive2025">1(2025)</a></li>
+								<li><a class="dropdown-item" href="/archive2025">Volume 1(2025)</a></li>
 							</ul>
 						</div>
 					</div>
