--- a/a/s2026781201.html
+++ b/a/s2026781201.html
@@ -482,13 +482,13 @@
 					<div class="col-md-6 text-md-end order-md-2 px-2">
 						<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
 							<div class="col-12 p-0 m-0">
-								<a href="https://zenodo.org/communities/solav" alt="Zenodo">
+								<a href="https://zenodo.org/communities/solav" alt="Zenodo" target="_blank">
 									<img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo"></a>
-								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite.">
+								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite." target="_blank">
 									<img src="/images/datacite-logo.svg" class="d-Icons" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite."></a>
-								<a href="https://bsky.app/profile/solav.me" alt="Bluesky">
+								<a href="https://bsky.app/profile/solav.me" alt="Bluesky" target="_blank">
 									<img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky"></a>
-								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon">
+								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon" target="_blank">
 									<img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon"></a>
 							</div>
 							<ul class="list-inline col-12 p-0 m-0">
